force-app/main/default/objects/Philanthropies__c/Philanthropies__c.object-meta.xml
<CustomObject>
    <label>Philanthropies</label>
    <nameField>
        <label>Philanthropy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Philanthropies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>