force-app/main/default/objects/Philanthropies__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Philanthropies</relationshipLabel>
    <relationshipName>Philanthropies</relationshipName>
    <type>Lookup</type>
</CustomField>