force-app/main/default/objects/Philanthropies__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <inlineHelpText>Enter the Cause for which this help has been done.</inlineHelpText>
    <label>Cause</label>
    <length>32</length>
    <type>Text</type>
</CustomField>