force-app/main/default/objects/Philanthropies__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This field is used to reference an ID from another, external system.</inlineHelpText>
    <label>ExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>